--- a/home/index.html
+++ b/home/index.html
@@ -15,15 +15,15 @@
       <div class="nav row">
         <div class="col-sm-12 text-center col-lg-8 text-center">
           <ul>
-            <li><a href="">Nosotros/FAQ</a></li>
-            <li><a href="">Destinos</a></li>
-            <li><a href="">Registro</a></li>
+            <li><a href="../preguntasfrecuentes/PreguntasFrecuentes.html">Nosotros/FAQ</a></li>
+            <li><a href="../trips/trips.php">Destinos</a></li>
+            <li><a href="../register/register.php">Registro</a></li>
           </ul>
         </div>
         <div class="col-sm-12 text-center col-lg-4 text-right">
           <ul>
-            <li><a href="">Log in</a></li>
-            <li><a href=""><i class="fas fa-shopping-cart"></i></a></li>
+            <li><a href="../login/login.html">Log in</a></li>
+            <li><a href="../carrito/carrito.html"><i class="fas fa-shopping-cart"></i></a></li>
           </ul>
         </div>
       </div>
@@ -32,11 +32,11 @@
     Menu
   </button>
   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    <a class="dropdown-item" href="#">Nosotros/FAQ</a>
-    <a class="dropdown-item" href="#">Destinos</a>
-    <a class="dropdown-item" href="#">Registro</a>
-    <a class="dropdown-item" href="#">Log in</a>
-    <a class="dropdown-item" href="#">Mi carrito</a>
+    <a class="dropdown-item" href="../preguntasfrecuentes/PreguntasFrecuentes.html">Nosotros/FAQ</a>
+    <a class="dropdown-item" href="../trips/trips.php">Destinos</a>
+    <a class="dropdown-item" href="../register/register.php">Registro</a>
+    <a class="dropdown-item" href="../login/login.html">Log in</a>
+    <a class="dropdown-item" href="../carrito/carrito.html#">Mi carrito</a>
   </div>
 </div>
 <img class="logo-name" src="img/nombre-blanco.png" alt="">
@@ -53,21 +53,21 @@
         <h2>servicio</h2>
         <div class="feature_divider">
         </div>
-        <p>Paquetes disenados por nuestro equipo de especialistas para maximisar su disfrute, incluyendo vuelos, estadia, transfers y todos los tramites correspondientes.<br>"Leave it with us!"</p>
+        <p>Paquetes disenados por nuestro equipo de especialistas para maximizar su disfrute, incluyendo vuelos, estadia, transfers y todos los tramites correspondientes.</p>
       </div>
       <div class="col-12 col-md-12 col-lg-4 text-center">
         <img class="imagen" src="img/comfort.png" alt="foto">
         <h2>comfort</h2>
         <div class="feature_divider">
         </div>
-        <p>Hospedaje en resorts 5 y 6 estrellas en las locaciones mas exoticas y exclusivas alrededor del mundo, con paquetes personalizados para garantizar el maximo comfort ya sea en viajes de negocio, en pareja o familiares.<br>"Just sit back and relax!"</p>
+        <p>Hospedaje en resorts 5 y 6 estrellas en las locaciones mas exoticas y exclusivas alrededor del mundo, con paquetes personalizados para garantizar el maximo comfort ya sea en viajes de negocio, en pareja o familiares.</p>
       </div>
       <div class="col-12 col-md-12 col-lg-4 text-center">
         <img class="imagen" src="img/exclusividad.png" alt="foto">
         <h2>exclusividad</h2>
         <div class="feature_divider">
         </div>
-        <p>Opcional para vuelos locales e internacionales en jets privados, accesso a excutive lounges en todos los aeropuertos, acceso VIP a los eventos mas exclusivos.<br>"Live like a king!"</p>
+        <p>Opcional para vuelos locales e internacionales en jets privados, accesso a executive lounges en todos los aeropuertos, acceso VIP a los eventos mas exclusivos.</p>
       </div>
     </div>
     <div id="destinations" class="container-fluid">
@@ -90,8 +90,8 @@
         </div>
         <div class="footer-legal col-12 text-center col-lg-6 text-center">
           <ul>
-            <li><a href="#">Contacto</a></li>
-            <li><a href="#">FAQ</a></li>
+            <li><a href="../contacto/contacto.html">Contacto</a></li>
+            <li><a href="../preguntasfrecuentes/PreguntasFrecuentes.html">FAQ</a></li>
             <li><a href="#">Legal</a></li>
           </ul>
           <ul>
