--- a/login/login.html
+++ b/login/login.html
@@ -6,27 +6,41 @@
     <link rel="stylesheet" href="CSS/loginstyle.css">
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Raleway&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/34b9ea8fdc.js"></script>
+    <title>Log in</title>
   </head>
   <body>
-    <div id="header" class="container-fluid">
+    <header id="header" class="container-fluid">
       <img class="logo-left" src="img/logo-blanco.png" alt="">
       <img class="logo-right" src="img/logo-blanco.png" alt="">
       <div class="nav row">
         <div class="col-sm-12 text-center col-lg-8 text-center">
           <ul>
-            <li><a href="">Nosotros/FAQ</a></li>
-            <li><a href="">Destinos</a></li>
-            <li><a href="">Registro</a></li>
+            <li><a href="../preguntasfrecuentes/PreguntasFrecuentes.html">Nosotros/FAQ</a></li>
+            <li><a href="../trips/trips.php">Destinos</a></li>
+            <li><a href="../register/register.php">Registro</a></li>
           </ul>
         </div>
         <div class="col-sm-12 text-center col-lg-4 text-right">
           <ul>
-            <li><a href="">Log in</a></li>
-            <li><a href=""><i class="fas fa-shopping-cart"></i></a></li>
+            <li><a href="login.html">Log in</a></li>
+            <li><a href="../carrito/carrito.html"><i class="fas fa-shopping-cart"></i></a></li>
           </ul>
         </div>
       </div>
-    </div>
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Menu
+        </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="../preguntasfrecuentes/PreguntasFrecuentes.html">Nosotros/FAQ</a>
+            <a class="dropdown-item" href="../trips/trips.php">Destinos</a>
+            <a class="dropdown-item" href="../register/register.php">Registro</a>
+            <a class="dropdown-item" href="login.html">Log in</a>
+            <a class="dropdown-item" href="../carrito/carrito.html">Mi carrito</a>
+          </div>
+        </div>
+        <img class="logo-name" src="img/nombre-blanco.png" alt="">
+    </header>
     <div class="foto container-fluid row pl-5 pt-5">
       <div class="col-8 col-md-5 col-lg-4 offset-1 pt-5">
         <form>
@@ -55,8 +69,8 @@
         </div>
         <div class="footer-legal col-12 text-center col-lg-6 text-center">
           <ul>
-            <li><a href="#">Contacto</a></li>
-            <li><a href="#">FAQ</a></li>
+            <li><a href="../contacto/contacto.html">Contacto</a></li>
+            <li><a href="../preguntasfrecuentes/PreguntasFrecuentes.html">FAQ</a></li>
             <li><a href="#">Legal</a></li>
           </ul>
           <ul>
