--- a/PerfilDeUsuario/Reservas.html
+++ b/PerfilDeUsuario/Reservas.html
@@ -3,8 +3,47 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="Reservas.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+   <link rel="stylesheet" href="CSS/carritostyle.css">
+   <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Raleway&display=swap" rel="stylesheet">
+   <script src="https://kit.fontawesome.com/34b9ea8fdc.js"></script>
   </head>
   <body class="body">
+    <header id="header" class="container-fluid">
+      <img class="logo-left" src="img/logo-blanco.png" alt="">
+      <img class="logo-right" src="img/logo-blanco.png" alt="">
+      <div class="nav row">
+        <div class="col-sm-12 text-center col-lg-8 text-center">
+          <ul>
+            <li><a href="../PreguntasFrecuentes/PreguntasFrecuentes.html">Nosotros/FAQ</a></li>
+            <li><a href="">Destinos</a></li>
+            <li><a href="">Registro</a></li>
+          </ul>
+        </div>
+        <div class="col-sm-12 text-center col-lg-4 text-right">
+          <ul>
+            <li><a href="">Log in</a></li>
+            <li><a href=""><i class="fas fa-shopping-cart"></i></a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Menu
+        </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="../PreguntasFrecuentes/PreguntasFrecuentes.html">Nosotros/FAQ</a>
+            <a class="dropdown-item" href="#">Destinos</a>
+            <a class="dropdown-item" href="#">Registro</a>
+            <a class="dropdown-item" href="#">Log in</a>
+            <a class="dropdown-item" href="#">Mi carrito</a>
+          </div>
+        </div>
+        <img class="logo-name" src="img/nombre-blanco.png" alt="">
+    </header>
+
 <img src="fondo3.jpg" alt="imagenfondo">
 <img src="logoblanco.png" alt="logo" class= "logo" width="200">
 <section class="falsoheader">
@@ -13,7 +52,7 @@
    <h1>Nombre y Apellido</h1>
     <div class="separador"></div>
     <nav>
-      <ul class= "menu">
+      <ul class= "men">
         <li class="nav"><a style="text-decoration:none" href="Perfil.html">Informacion</a></li>
         <li><a style="text-decoration:none" href="Reservas.html">Reservas</a></li>
         <li><a style="text-decoration:none" href="../PreguntasFrecuentes/PreguntasFrecuentes.html">Preguntas Frecuenes (FAQs)</a></li>
@@ -26,3 +65,30 @@
   <img src="tikets.png" alt="tickets" width="300" class= "tickets">
   <p>Aun no tienes vouchers usados para mostrar</p>
 </section>
+
+<footer id="footer" class="container-fluid row pt-4">
+    <div class="footer-social col-12 text-center col-lg-6 text-center">
+      <p>redes sociales</p>
+      <ul>
+        <li><a href="https://facebook.com"><i class="fab fa-facebook" alt="facebook"></i></a></li>
+        <li><a href="https://twitter.com"><i class="fab fa-twitter-square"></i></a></li>
+        <li><a href="https://instagram.com"><i class="fab fa-instagram"></i></a></li>
+      </ul>
+    </div>
+    <div class="footer-legal col-12 text-center col-lg-6 text-center">
+      <ul>
+        <li><a href="../Contacto/Contacto.html">Contacto</a></li>
+        <li><a href="../PreguntasFrecuentes/PreguntasFrecuentes.html">FAQ</a></li>
+        <li><a href="#">Legal</a></li>
+      </ul>
+      <ul>
+        <li><i class="fab fa-cc-visa"></i></li>
+        <li><i class="fab fa-cc-mastercard"></i></li>
+        <li><i class="fab fa-cc-amex"></i></li>
+        <li><i class="fab fa-cc-paypal"></i></li>
+      </ul>
+    </div>
+  </footer>
+
+</body>
+</html>
